chore: added droping draggable element

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div class="header">
             Backlog
           </div>
-          <div class="tasks">
+          <div class="tasks" data-drop-zone >
             <div class="task" data-draggable>
               Do Laundry
             </div>
@@ -29,7 +29,7 @@
           <div class="header">
             Doing
           </div>
-          <div class="tasks">
+          <div class="tasks" data-drop-zone>
             <div class="task" data-draggable>
               Record Video
             </div>
@@ -42,7 +42,7 @@
           <div class="header">
             Done
           </div>
-          <div class="tasks">
+          <div class="tasks" data-drop-zone>
             <div class="task" data-draggable>
               Plan Trello Clone Video
             </div>
